k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: websites-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: management.csgames.polyhx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: csgames-api-staging-backend
          servicePort: 8080
  - host: identity.csgames.polyhx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: csgames-sts-staging-backend
          servicePort: 5555
  - host: mail.csgames.polyhx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: csgames-mail-staging-backend
          servicePort: 8090
